--- a/package.json
+++ b/package.json
@@ -4,14 +4,16 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node ./src/index.js"
+    "test": "mocha --recursive --exit",
+    "start": "node index.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.19.0",
+    "chai": "^4.2.0",
+    "chai-http": "^4.3.0",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
@@ -21,8 +23,10 @@
     "helmet": "^4.1.0",
     "jsonwebtoken": "^8.5.1",
     "jwks-rsa": "^1.9.0",
+    "mocha": "^8.1.1",
     "morgan": "^1.10.0",
     "passport": "^0.4.1",
-    "passport-auth0": "^1.3.3"
+    "passport-auth0": "^1.3.3",
+    "supertest": "^4.0.2"
   }
 }
