--- a/package.json
+++ b/package.json
@@ -24,9 +24,14 @@
     "jsonwebtoken": "^8.5.1",
     "jwks-rsa": "^1.9.0",
     "mocha": "^8.1.1",
+    "mongoose": "^5.10.0",
     "morgan": "^1.10.0",
     "passport": "^0.4.1",
     "passport-auth0": "^1.3.3",
     "supertest": "^4.0.2"
+  },
+  "devDependencies": {
+    "jest": "^26.4.2",
+    "mongodb-memory-server": "^6.6.6"
   }
 }
